<resources>
    <string name="app_name">Evelyn Hugo</string>
    <string name="login">Fã de verdade?</string>
    <string name="voltar">aqui?</string>
    <string name="novo">Novo por</string>
    <string name="fa">Se torne um fâ</string>
    <string name="voltar2">Oscar?</string>
    <string name="novo2">já tem um</string>
    <string name="nome">EVELYN HUGO</string>
    <string name="Biografia">Biografia Autorizada</string>
    <string name="CeliaHistoria">A</string>
    <string name="Celianinguem">que ninguém leu</string>
    <string name="CeliaFilmes">Os</string>
    <string name="CeliaVrau">que todos assistiram</string>
    <string name="BtnHistoria">história</string>
    <string name="BtnFilmes">filmes</string>
    <string name="BtnDetalhes">Ver Detalhes</string>
    <string name="lover">The real love</string>
    <string name="instructions">Escreva o nome do livro. </string>
    <string name="button_text">Ver</string>
    <string name="input_hint">Pesquisa API</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="no_network">Please check your network connection and try again.</string>
    <string name="no_results">No Results Found</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Dear">Dear Friend...</string>
    <string name="Dear2">Dear Lover...</string>
    <string name="texto1">Nestes últimos tempos, tenho percebido o quão incrível você é. Sua força, inteligência e coragem são admiráveis. Você ilumina qualquer ambiente com sua presença radiante e sempre encontra uma maneira de alegrar o dia de todos ao seu redor.</string>
    <string name="texto2">Minha querida amiga, saiba que estarei sempre aqui para você, em todos os momentos, como um ombro para chorar, uma voz para aconselhar e uma amiga para celebrar suas conquistas. Você é uma pessoa extraordinária e merece toda a felicidade do mundo.</string>
    <string name="assed">Edward</string>
    <string name="texto3">Nosso amor é como uma chama ardente que queima constantemente dentro de mim. Lembro-me das noites em que nos perdíamos em conversas profundas e sinceras, compartilhando nossos sonhos e medos mais profundos. Cada momento ao seu lado é um tesouro que guardo em meu coração.</string>
    <string name="texto4">No entanto, também sei que nosso amor é desafiador. Vivemos em um mundo que nem sempre nos aceita de braços abertos. Mas quero que saiba que estou disposta a enfrentar qualquer obstáculo para ficar ao seu lado. Sua felicidade é o meu maior desejo, e farei o que for necessário para proteger e cultivar nosso amor.</string>
    <string name="carinho">Com carinho</string>
    <string name="amor">Com amor</string>
    <string name="babe">Evelyn</string>
    <string name="tituli">The Evelyn´s Hugo History</string>
    <string name="menu1">Página Inicial</string>
    <string name="husbtitulo">The Husbands</string>
    <string name="nomemarido1">Ernie Diaz</string>
    <string name="nomemarido2">Don Adler</string>
    <string name="nomemarido3">Mick Riva</string>
    <string name="nomemarido4">Rex North</string>
    <string name="nomemarido5">Harry Camerom</string>
    <string name="nomemarido6">Max Girard</string>
    <string name="nomemarido7">Robert Jaminson</string>
    <string name="primeiro">O Pobre</string>
    <string name="segundo">O Maldito</string>
    <string name="terceiro">O Insáciavel</string>
    <string name="quarto">O esperto</string>
    <string name="quinto">O Brilhante, Generoso e Sofrido</string>
    <string name="sexto">O Decepcionante</string>
    <string name="setimo">O Pacato</string>
    <string name="monique1">Carteira de Trabalho e previdência social</string>
    <string name="monique2">Série:</string>
    <string name="monique3">Descrição:</string>
    <string name="monique4">Série:</string>
    <string name="monique5">00017RS</string>
    <string name="monique6">Polegar Direito</string>


</resources>