<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/txtemail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:background="@drawable/degradelogin">

    <EditText
        android:id="@+id/password1"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_below="@id/username1"
        android:drawablePadding="5dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:textColorHint="#225533"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <Button
        android:id="@+id/btnsignin1"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:backgroundTint="#225533"
        android:shadowColor="#FBB821"
        android:text="Entrar"
        android:layout_below="@id/btnsignup1"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.821"
        app:rippleColor="#0F150A"
        tools:ignore="OnClick" />

    <TextView
        android:id="@+id/txtlog"
        android:layout_width="368dp"
        android:layout_height="119dp"
        android:text="@string/login"
        android:textColor="@color/verdinho"
        android:textSize="55dp"
        app:fontFamily="cursive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143" />

    <TextView
        android:id="@+id/txtcrie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/novo"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/txtsenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-2dp"
        android:text="senha"
        android:padding="12dp"
        android:textColor="@color/verdinho"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442" />

    <EditText
        android:id="@+id/username1"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.372" />

    <TextView
        android:id="@+id/txtnomee"
        android:layout_width="68dp"
        android:layout_height="59dp"
        android:padding="11dp"
        android:text="nome"
        android:textColor="@color/verdinho"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.331" />

    <Button
        android:id="@+id/btnsignup1"
        android:layout_width="99dp"
        android:layout_height="50dp"
        android:layout_below="@id/password1"
        android:background="#00000000"
        android:fontFamily="sans-serif"
        android:text="@string/voltar"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.621"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

</androidx.constraintlayout.widget.ConstraintLayout>
